the solution to the bug of all bugs: word wrap

--- a/source/stylesheets/_articles.scss
+++ b/source/stylesheets/_articles.scss
@@ -56,8 +56,9 @@
     background: #F8F8F8;
     padding: 0.5em 1em;
     margin: 1.5em 0;
-    overflow: auto;
+    word-wrap:break-word;
     @include border-radius(4px);
+    font-size: 12px;
   }
   footer {
     background: #c6bda8;
